# inventorymgmt

./: .copywrite.hcl  .env  .gitignore  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  postcss.config.mjs  prettier.config.js
.cargo/: config.toml
.github/workflows/: publish.yml
app/: global-error.tsx  globals.css  layout.tsx  not-found.tsx
app/(dashboard)/: layout.tsx  page.tsx
app/(dashboard)/c/: page.tsx
app/(dashboard)/p/: page.tsx
app/(dashboard)/p/(ops)/: layout.tsx
app/(dashboard)/p/(ops)/in/: page.tsx
app/(dashboard)/p/(ops)/return/: page.tsx
app/(dashboard)/p/add/: page.tsx
app/(dashboard)/p/delete/: page.tsx
app/(dashboard)/p/detail/: page.tsx
app/(dashboard)/p/edit/: page.tsx
app/error-test/: page.tsx
components/: app-dashboard.tsx  barcode-display.tsx  barcode-image.tsx  barcode-scanner-dialog.tsx  client-error-boundary.tsx  command-search.tsx  date-picker.tsx  error-boundary.tsx  image-picker.tsx  product-dialog.tsx  stats-card.tsx
components/ui/: badge.tsx  button.tsx  calendar.tsx  card.tsx  command.tsx  dialog.tsx  form.tsx  input.tsx  label.tsx  popover.tsx  resizable.tsx  select.tsx  sonner.tsx  table.tsx  textarea.tsx
lib/: inventory-manager.ts  inventory-service.ts  utils.ts
lib/hooks/: use-barcode-image.ts
lib/store/: product-store.ts
lib/types/: common.ts  database.ts
lib/utils/: file-utils.ts  validation.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: init-schema.sql
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs
src-tauri/src/utils/: barcode.rs  mod.rs
