[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
envy = "0.4.2"
dotenv = "0.15.0"
barcoders = { version = "2.0.0", features = ["image", "json"] }
anyhow = "1.0.98"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
imageproc = "0.25.0"
image = "0.25.6"
ab_glyph = "0.2.29"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
regex = "1.11.1"
